# cap-static-tools

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
legacy/index.html/: create-index-html-trigger.py  create-index-html.py
legacy/pdf/: copy-archive-data-to-r2-trigger.py  copy-archive-data-to-r2.py
legacy/tar/: copy-tar-files-to-r2-trigger.py  copy-tar-files-to-r2.py
tasks/: __init__.py  create_index_html.py  helpers.py  split_pdfs.py  sync_static_bucket.py  unredact.py  zip_volumes.py
tests/: conftest.py  test_split_pdfs.py  test_unredact.py
tests/test_data/a2d/100/: CasesMetadata.json
